# sim

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  FEATURES.md  Makefile  README.md  docker-compose.yml  monitor_full_run.py  monitor_simulation.py  pyproject.toml  requirements.txt  test_graphiti_debug.py  test_minimal.py  test_neo4j_simple.py
docs/: ARCHITECTURE.md  CODE_DOCUMENTATION.md  MEMORY_EDGES.md  MEMORY_NODES.md  MEMORY_SYSTEM.md
monitoring/grafana/dashboards/: simulation-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/prometheus/: prometheus.yml
scripts/: setup.sh
sim/: __init__.py  main.py
sim/agents/: base_agent.py  personality.py  sage_agent.py
sim/config/: settings.py
sim/memory/: graphiti_manager.py  manager.py
sim/orchestration/: conversation_manager.py  engine.py  rate_limiter.py
sim/tools/: agent_tools.py
sim/world/: grid.py
src/: main.py
src/agents/: base_agent.py  sage_agent.py
src/config/: settings.py
src/memory/: graphiti_manager.py  manager.py  neo4j_driver_patch.py  optimizations.py  simple_neo4j_driver.py
src/orchestration/: conversation_manager.py  engine.py  rate_limiter.py  retry.py
src/tools/: agent_tools.py
src/world/: grid.py
tests/: conftest.py  test_graphiti_debug_migrated.py  test_graphiti_minimal.py  test_neo4j_simple_migrated.py
todo/: TODO.md
