[project]
name = "llm-agent-simulation"
version = "0.1.0"
description = "Multi-agent LLM simulation with personality evolution and memory"
requires-python = ">=3.10"
dependencies = [
    "strands-agents[openai]>=1.0.0",
    "strands-agents-tools>=0.2.4",
    "openai>=1.0.0",
    "neo4j>=5.28.0",
    "graphiti-core>=0.18.0",
    "boto3>=1.28.0",
    "anthropic>=0.25.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.7.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "tiktoken>=0.5.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "ipython>=8.14.0",
]

[project.scripts]
sim = "src.main:app"
sim-server = "src.server:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true